ROMControl: Fixes / Clarity / Consistency
Changes:
    Installer:
       -Summary for disabled Prefs
       -Convert unused booleans to voids
    SPenGestures:
       -Summary for disabled Prefs
    Lockscreen:
       -No more hiding preferences,
            opt for a scrollview instead
    GeneralUI:
       -Summary for disabled Prefs
    Navbar:
       -Summary for disabled Prefs
    Powermenu:
       -Remove ugly summary && string edit
    Sound:
       -Summary for disabled Prefs
       -Abandon "isStarted logic" from FlipService
           use "onCreate" instead to avoid multiple
           listeners
       -Stopservice if no applicable settings enabled
    Clock:
       -Remove Protekk Option (Broken anyway)
       -Summary for disabled Prefs
    Signal:
       -Summary for disabled Prefs
    Toggles:
       -Summary for disabled Prefs
       -Fix RibbonToggles enabling their toggle
           settings if the ribbon isn't on
    Strings:
       -Minor edits

    *** jbmr2 bringup

Change-Id: I16e5201e43c86ac050ab01f50df3c25fd4725821

--- a/res/xml/prefs_powermenu.xml
+++ b/res/xml/prefs_powermenu.xml
@@ -22,12 +22,10 @@
 
     <SwitchPreference
         android:key="show_navbar_hide"
-        android:title="@string/title_show_navbar_hide"
-        android:summary="@string/summary_show_navbar_hide" />
+        android:title="@string/title_show_navbar_hide" />
 
     <SwitchPreference
         android:key="show_reboot_keyguard"
-        android:title="@string/title_show_reboot_keyguard"
-        android:summary="@string/summary_show_reboot_keyguard" />
+        android:title="@string/title_show_reboot_keyguard" />
 
 </PreferenceScreen>
